--- a/reset.css
+++ b/reset.css
@@ -18,10 +18,11 @@ body {
   width: 100%;
   margin: 0 auto;
   font-size: 1rem;
+  font-family: "Figtree", sans-serif;
 }
 
 #innerWrapp {
-  width: 90%;
+  width: 88%;
   display: flex;
   flex-direction: column;
   justify-content: center;
