--- a/reset.scss
+++ b/reset.scss
@@ -15,10 +15,11 @@ body {
   width: 100%;
   margin: 0 auto;
   font-size: 1rem;
+  font-family: "Figtree", sans-serif;
 }
 
 #innerWrapp {
-  width: 90%;
+  width: 88%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,4 +29,5 @@ body {
 $color: (
   darkColor: #0c0c0d,
   mainBgColor: #e1e0dd,
+  keyColor: #696d7f,
 );
