--- a/style.scss
+++ b/style.scss
@@ -3,42 +3,116 @@
 body {
   width: 100%;
   height: 100%;
-  background: #e1e0dd;
+  background: #000000;
+  color: #fff;
+  font-family: "Figtree", sans-serif;
 }
 
+.lineContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 160px 0px;
+  .infoTitle {
+    padding: 6px 20px;
+    color: map-get(reset.$color, keyColor);
+    border: 1px solid #323232;
+    border-radius: 16px;
+  }
+  .line {
+    background: #323232;
+    flex: 1;
+    height: 1px;
+  }
+}
+.topNav {
+  display: none;
+  position: relative;
+  background: map-get(reset.$color, darkColor);
+  width: 0%;
+  height: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  .trigger {
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    span {
+      color: #fff;
+    }
+  }
+}
 #Header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 80px;
-  background: map-get(reset.$color, darkColor);
+  height: 100px;
+  background: linear-gradient(
+    to bottom,
+    rgba(146, 159, 173, 0.3),
+    rgba(146, 159, 173, 0.1),
+    rgba(255, 255, 255, 0)
+  );
   display: flex;
   align-items: center;
   justify-content: center;
   transition: transform 0.6s ease-in-out;
   .headerContents {
     width: 100%;
-    padding: 0 20px;
+    padding: 0 8px;
     display: flex;
     justify-content: space-between;
-  }
-  .logo {
-    color: #fff;
+    svg {
+      animation: rotate infinite 12s linear;
+    }
   }
   .gnb {
     width: auto;
     color: #fff;
     display: flex;
+    align-items: center;
     gap: 100px;
     margin-right: 100px;
     div {
-      font-size: 12px;
+      font-size: 0.9rem;
       cursor: pointer;
     }
   }
 }
+#Header.clickTrigger {
+  right: 0;
+  .headerContents {
+    width: 100%;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
+  .logo {
+    color: #fff;
+  }
+
+  .gnb {
+    width: auto;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+    margin-right: 100px;
+  }
+
+  .gnb div {
+    font-size: 12px;
+    cursor: pointer;
+  }
+}
 #Intro {
+  animation: blur 2s ease;
   padding: 80px 0 40px 0;
   width: 100%;
   height: 100vh;
@@ -56,28 +130,24 @@ body {
     line-height: 8rem;
     div {
       font-size: 8rem;
+      font-weight: 400;
     }
   }
 }
-#Infomation {
-  .infoTitle {
-    width: 120px;
-    height: 30px;
-    padding: 20px 0;
-    margin-bottom: 30px;
-    color: #000000;
-    border: 2px solid map-get(reset.$color, darkColor);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    opacity: 1;
-  }
-  .line {
+#Video {
+  width: 100%;
+  height: auto;
+  video {
     width: 100%;
-    height: 2px;
-    background: #000;
+    height: auto;
+    background: center/cover no-repeat;
   }
+}
+#Infomation {
+  margin-bottom: 160px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   .infoContentsWrapp {
     width: 100%;
     height: auto;
@@ -86,17 +156,18 @@ body {
     gap: 60px;
     cursor: pointer;
     .infoContents {
-      border: 1px solid #f00;
       width: 100%;
       height: auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      transition: all 0.5s;
       .proIgm {
         width: 100%;
+        height: auto;
         img {
           width: 100%;
-          height: 600px;
+          height: 460px;
           background: center/ no-repeat;
         }
       }
@@ -104,48 +175,68 @@ body {
         margin-top: 12px;
         .proName {
           font-size: 1.8rem;
+          &::before {
+            content: "";
+            display: inline-block;
+            transition: all 0.5s;
+          }
+          &:hover::before {
+            border-bottom: 1px solid map-get(reset.$color, keyColor);
+          }
         }
         .proDate {
-          font-size: 1.2rem;
+          font-size: 1.1rem;
+          padding: 10px 0;
         }
+      }
+      &:hover {
+        transform: translateY(-10px);
       }
     }
   }
 }
-#Profile {
+#AllprofileComent {
   width: 100%;
-  margin-top: 50px;
-  .profileTitle {
-    width: 100%;
-    height: 100px;
-    padding: 60px 0;
-    border: 1px solid #f00;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.8rem;
-  }
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   .profileComent {
     width: 100%;
-    border: 1px solid #f00;
-    padding: 30px 0;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 4rem;
+    font-weight: 400;
   }
+}
+#Profile {
+  width: 100%;
+  height: auto;
   .profileContents {
     display: flex;
     .profileDesc {
       flex: 2;
       height: 500px;
-      border: 1px solid #f00;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 30px;
       .myinfo {
         padding: 30px;
-      }
-      .tool {
-        font-size: 1.2rem;
-        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        .descWrapp {
+          display: flex;
+          .myinfoDesc {
+            width: 360px;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+          }
+        }
       }
       .tools {
         display: flex;
@@ -154,16 +245,25 @@ body {
         padding: 10px 30px;
         ul {
           display: flex;
-          border-bottom: 1px solid #f00;
-          gap: 18px;
+          li {
+            width: auto;
+            padding-right: 20px;
+          }
         }
         .toolltitle {
+          width: 360px;
           font-weight: bold;
         }
+      }
+      .myGray {
+        color: #7d7d7d;
       }
     }
     .profileImg {
       flex: 1;
+      display: flex;
+      justify-content: end;
+      align-items: center;
       img {
         width: 100%;
         height: 500px;
@@ -185,11 +285,18 @@ body {
     padding: 160px 0;
     display: flex;
     align-items: center;
-    gap: 60px;
+    gap: 220px;
+    svg {
+      animation: rotate infinite 16s linear;
+    }
   }
   .App {
     display: flex;
     gap: 60px;
+    img {
+      width: 60px;
+      height: 60px;
+    }
     span {
       width: 35px;
       height: 35px;
@@ -219,22 +326,38 @@ body {
     }
   }
 }
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes blur {
+  0% {
+    filter: blur(12px);
+  }
+  100% {
+    filter: blur(0px);
+  }
+}
 
 @media screen and (max-width: 768px) {
   .topNav {
     position: relative;
-    background: map-get(reset.$color, darkColor);
+    right: 0;
+    top: 0;
     width: 100%;
     height: 60px;
     display: flex;
-    align-items: center;
     .trigger {
-      border: 1px solid #f00;
+      margin-right: 20px;
       display: flex;
-      justify-content: center;
-      align-items: center;
       cursor: pointer;
-      transition: all 0.4s;
+      span {
+        color: #fff;
+      }
     }
   }
 
@@ -244,40 +367,39 @@ body {
     right: -180px; /* 처음에 화면 밖에 위치 */
     width: 180px;
     height: 100%;
-    background-color: #333; /* 어두운 배경색 */
+    background-color: #0d0d0d; /* 어두운 배경색 */
     display: flex;
     align-items: center;
-    justify-content: center;
     transition: right 0.4s ease-in-out; /* right 속성을 조정하여 나타나도록 */
   }
 
   #Header.clickTrigger {
-    right: 0; /* 트리거 클릭 시 사이드바가 화면 안으로 슬라이드 */
-  }
+    right: 0;
+    top: 0;
+    .headerContents {
+      width: 100%;
+      padding: 0 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
-  .headerContents {
-    width: 100%;
-    padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+    .logo {
+      color: #fff;
+    }
 
-  .logo {
-    color: #fff;
-  }
+    .gnb {
+      width: auto;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      gap: 80px;
+      margin-right: 100px;
+    }
 
-  .gnb {
-    width: auto;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
-    margin-right: 100px;
-  }
-
-  .gnb div {
-    font-size: 12px;
-    cursor: pointer;
+    .gnb div {
+      font-size: 12px;
+      cursor: pointer;
+    }
   }
 }
