--- a/zero100.css
+++ b/zero100.css
@@ -41,6 +41,7 @@ body {
 
 .elTxt {
   color: #838383;
+  padding-top: 20px;
 }
 
 #innerWrapp {
@@ -79,7 +80,7 @@ body {
      object-fit: cover;
 }
 #bg .bgtxt {
-  padding: 180px 0;
+  padding: 140px 0;
   text-align: center;
   line-height: 1.8rem;
   color: #ccc;
@@ -89,22 +90,21 @@ body {
 }
 
 #problem {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 #problem .problemBoxAll {
   display: flex;
-  gap: 20px;
   height: 460px;
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: start;
   padding-top: 50px;
 }
 #problem .problemBoxAll .problemBox {
   cursor: pointer;
   overflow: hidden;
-  width: 300px;
+  width: 320px;
   height: 180px;
   background: #181817;
   border-radius: 20px;
@@ -205,6 +205,7 @@ body {
 }
 
 #swot {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -214,7 +215,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
 }
 #swot .swotBoxAll {
   cursor: pointer;
@@ -223,27 +223,18 @@ body {
   height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: start;
   padding-top: 50px;
-  position: relative;
-}
-#swot .swotBoxAll .onImg {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50px);
-  z-index: 10;
 }
 #swot .swotBoxAll .swotTable {
-  width: 100%;
   height: 230px;
   overflow: hidden;
-  gap: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding-top: 20px;
   border-radius: 20px;
+  gap: 12px;
   transition: all 0.5s;
   opacity: 0.5;
 }
@@ -252,7 +243,7 @@ body {
   opacity: 1;
 }
 #swot .swotBoxAll .swotTable .tableBox {
-  width: 300px;
+  width: 320px;
   height: 180px;
   font-size: 1.2rem;
   font-weight: normal;
@@ -287,22 +278,265 @@ body {
 }
 
 #userinterview {
+  width: 100%;
   padding-top: 60px;
 }
 #userinterview .interviewBoxWarrp {
+  width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 #userinterview .interviewBoxWarrp .interviewBox {
-  cursor: pointer;
-  overflow: hidden;
-  width: 300px;
-  height: 180px;
-  background: #181817;
+  width: 100%;
+  height: auto;
+  background: #0f0f0f;
   border-radius: 20px;
   padding: 20px;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   transition: all 0.5s;
+}
+#userinterview .interviewBoxWarrp .interviewBox .userinfoWrapp {
+  width: 300px;
+  display: flex;
+  justify-content: space-evenly;
+}
+#userinterview .interviewBoxWarrp .interviewBox .userinfoWrapp .userInfo {
+  color: #838383;
+}
+#userinterview .interviewBoxWarrp .interviewBox .userinfoWrapp .userSubInfo {
+  color: #b9b9b9;
+  font-weight: normal;
+}
+#userinterview .userMainTxt {
+  display: flex;
+  justify-content: center;
+  padding: 80px 0;
+  font-weight: bold;
+  font-size: 2.4rem;
+}
+#userinterview .AllenswerBox {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#userinterview .AllenswerBox .TopenswerBoxWrapp {
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  animation: scroll 15s linear infinite;
+}
+#userinterview .AllenswerBox .TopenswerBoxWrapp .enswerBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 260px;
+  height: 100px;
+  padding: 20px;
+  background: #181817;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 0.9rem;
+}
+#userinterview .AllenswerBox .TopenswerBoxWrapp .enswerBoxY {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 260px;
+  height: 100px;
+  padding: 20px;
+  background: #3f4136;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 0.9rem;
+}
+#userinterview .AllenswerBox .BottomenswerBoxWrapp {
+  width: 100%;
+  display: flex;
+  gap: 10px;
+}
+#userinterview .AllenswerBox .BottomenswerBoxWrapp .enswerBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 260px;
+  height: 100px;
+  padding: 20px;
+  background: #181817;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 0.9rem;
+}
+#userinterview .AllenswerBox .BottomenswerBoxWrapp .enswerBoxY {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 260px;
+  height: 100px;
+  padding: 20px;
+  background: #3f4136;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 0.9rem;
+}
+
+#tunmenail {
+  width: 100%;
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#tunmenail .SubText {
+  display: flex;
+  width: 100%;
+  color: #838383;
+  text-align: center;
+  padding: 0 80px;
+  font-weight: 400;
+}
+#tunmenail .tunmenailImg {
+  width: 100%;
+  height: auto;
+  padding: 60px 0;
+}
+#tunmenail .tunmenailImg img {
+  width: 100%;
+}
+
+#ia {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+}
+#ia .iaImg {
+  width: 100%;
+  height: auto;
+  padding: 60px 0;
+}
+#ia .iaImg img {
+  width: 100%;
+}
+
+#style {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#style .SymbolWrapp {
+  padding: 60px 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+#style .SymbolWrapp .logoDesc {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+#style .SymbolWrapp .logoDesc .logoImg {
+  width: 100%;
+}
+#style .SymbolWrapp .logoTxtDesc {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#style .SymbolWrapp .logoTxtDesc .logoTxt {
+  width: 100%;
+  font-weight: 200;
+  font-size: 0.8rem;
+  color: #ccc;
+}
+#style .colorWrapp {
+  padding: 60px 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+#style .colorWrapp .colorY {
+  cursor: pointer;
+  width: 20%;
+  height: 80px;
+  padding: 20px;
+  overflow: hidden;
+  border-radius: 50px;
+  background: #c9fc5a;
+  color: #c9fc5a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-weight: 600;
+  transition: all 0.3s;
+}
+#style .colorWrapp .colorY:hover {
+  width: 40%;
+  color: #000;
+}
+#style .colorWrapp .colorN {
+  cursor: pointer;
+  width: 20%;
+  background: #11122a;
+  height: 80px;
+  padding: 10px;
+  overflow: hidden;
+  border-radius: 50px;
+  color: #11122a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+#style .colorWrapp .colorN:hover {
+  width: 40%;
+  color: #fafafa;
+}
+#style .AllFontWrapp {
+  padding: 0 50px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+#style .AllFontWrapp .fontDesc {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#style .AllFontWrapp .fontDesc .smallFont {
+  display: flex;
+  font-size: 0.7rem;
+  padding: 30px 0;
+}
+#style .AllFontWrapp .fontDesc .FontLight {
+  display: flex;
+  font-size: 2rem;
+  font-weight: 100;
+}
+#style .AllFontWrapp .fontDesc .FontRegular {
+  display: flex;
+  font-size: 2rem;
+  font-weight: 300;
+}
+#style .AllFontWrapp .fontDesc .FontMedium {
+  display: flex;
+  font-size: 2rem;
+  font-weight: 500;
+}
+#style .AllFontWrapp .fontDesc .FontSemiBold {
+  display: flex;
+  font-size: 2rem;
+  font-weight: 700;
+}
+#style .AllFontWrapp .fontDesc .FontBold {
+  display: flex;
+  font-size: 2rem;
+  font-weight: 900;
 }
