--- a/zero100.scss
+++ b/zero100.scss
@@ -43,6 +43,7 @@ $color: (
 }
 .elTxt {
   color: #838383;
+  padding-top: 20px;
 }
 #innerWrapp {
   width: 1024px;
@@ -76,7 +77,7 @@ $color: (
     object-fit: cover;
   }
   .bgtxt {
-    padding: 180px 0;
+    padding: 140px 0;
     text-align: center;
     line-height: 1.8rem;
     color: #ccc;
@@ -86,20 +87,19 @@ $color: (
   }
 }
 #problem {
+  width: 100%;
   display: flex;
   flex-direction: column;
   .problemBoxAll {
     display: flex;
-    gap: 20px;
     height: 460px;
-    display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: start;
     padding-top: 50px;
     .problemBox {
       cursor: pointer;
       overflow: hidden;
-      width: 300px;
+      width: 320px;
       height: 180px;
       background: #181817;
       border-radius: 20px;
@@ -201,6 +201,7 @@ $color: (
   }
 }
 #swot {
+  width: 100%;
   display: flex;
   flex-direction: column;
   .swotsubTitle {
@@ -209,7 +210,6 @@ $color: (
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
   }
   .swotBoxAll {
     cursor: pointer;
@@ -218,26 +218,17 @@ $color: (
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: start;
     padding-top: 50px;
-    position: relative;
-    .onImg {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50px);
-      z-index: 10;
-    }
     .swotTable {
-      width: 100%;
       height: 230px;
       overflow: hidden;
-      gap: 20px;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       padding-top: 20px;
       border-radius: 20px;
+      gap: 12px;
       transition: all 0.5s;
       opacity: 0.5;
       &:hover {
@@ -245,7 +236,7 @@ $color: (
         opacity: 1;
       }
       .tableBox {
-        width: 300px;
+        width: 320px;
         height: 180px;
         font-size: 1.2rem;
         font-weight: normal;
@@ -282,22 +273,262 @@ $color: (
   }
 }
 #userinterview {
+  width: 100%;
   padding-top: 60px;
   .interviewBoxWarrp {
+    width: 100%;
     display: flex;
+    flex-direction: column;
     gap: 20px;
     .interviewBox {
-      cursor: pointer;
-      overflow: hidden;
-      width: 300px;
-      height: 180px;
-      background: #181817;
+      width: 100%;
+      height: auto;
+      background: #0f0f0f;
       border-radius: 20px;
       padding: 20px;
       display: flex;
-      flex-direction: column;
       justify-content: space-between;
       transition: all 0.5s;
+      .userinfoWrapp {
+        width: 300px;
+        display: flex;
+        justify-content: space-evenly;
+        .userInfo {
+          color: #838383;
+        }
+        .userSubInfo {
+          color: #b9b9b9;
+          font-weight: normal;
+        }
+      }
+    }
+  }
+  .userMainTxt {
+    display: flex;
+    justify-content: center;
+    padding: 80px 0;
+    font-weight: bold;
+    font-size: 2.4rem;
+  }
+  .AllenswerBox {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    .TopenswerBoxWrapp {
+      width: 100%;
+      display: flex;
+      gap: 10px;
+      animation: scroll 15s linear infinite;
+      .enswerBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 260px;
+        height: 100px;
+        padding: 20px;
+        background: map-get($color, borderColor);
+        border-radius: 20px;
+        text-align: center;
+        font-size: 0.9rem;
+      }
+      .enswerBoxY {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 260px;
+        height: 100px;
+        padding: 20px;
+        background: #3f4136;
+        border-radius: 20px;
+        text-align: center;
+        font-size: 0.9rem;
+      }
+    }
+    .BottomenswerBoxWrapp {
+      width: 100%;
+      display: flex;
+      gap: 10px;
+      .enswerBox {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 260px;
+        height: 100px;
+        padding: 20px;
+        background: map-get($color, borderColor);
+        border-radius: 20px;
+        text-align: center;
+        font-size: 0.9rem;
+      }
+      .enswerBoxY {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 260px;
+        height: 100px;
+        padding: 20px;
+        background: #3f4136;
+        border-radius: 20px;
+        text-align: center;
+        font-size: 0.9rem;
+      }
+    }
+  }
+}
+#tunmenail {
+  width: 100%;
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .SubText {
+    display: flex;
+    width: 100%;
+    color: #838383;
+    text-align: center;
+    padding: 0 80px;
+    font-weight: 400;
+  }
+  .tunmenailImg {
+    width: 100%;
+    height: auto;
+    padding: 60px 0;
+    img {
+      width: 100%;
+    }
+  }
+}
+#ia {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  .iaImg {
+    width: 100%;
+    height: auto;
+    padding: 60px 0;
+    img {
+      width: 100%;
+    }
+  }
+}
+#style {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .SymbolWrapp {
+    padding: 60px 0;
+    display: flex;
+    justify-content: space-evenly;
+    .logoDesc {
+      width: auto;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      .logoImg {
+        width: 100%;
+      }
+    }
+    .logoTxtDesc {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .logoTxt {
+        width: 100%;
+        font-weight: 200;
+        font-size: 0.8rem;
+        color: #ccc;
+      }
+    }
+  }
+  .colorWrapp {
+    padding: 60px 0;
+    display: flex;
+    justify-content: space-evenly;
+    .colorY {
+      cursor: pointer;
+      width: 20%;
+      height: 80px;
+      padding: 20px;
+      overflow: hidden;
+      border-radius: 50px;
+      background: #c9fc5a;
+      color: #c9fc5a;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-weight: 600;
+      transition: all 0.3s;
+      &:hover {
+        width: 40%;
+        color: #000;
+      }
+    }
+    .colorN {
+      cursor: pointer;
+      width: 20%;
+      background: #11122a;
+      height: 80px;
+      padding: 10px;
+      overflow: hidden;
+      border-radius: 50px;
+      color: #11122a;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-weight: 500;
+      transition: all 0.3s;
+      &:hover {
+        width: 40%;
+        color: #fafafa;
+      }
+    }
+  }
+  .AllFontWrapp {
+    padding: 0 50px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    .fontDesc {
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .smallFont {
+        display: flex;
+        font-size: 0.7rem;
+        padding: 30px 0;
+      }
+      .FontLight {
+        display: flex;
+        font-size: 2rem;
+        font-weight: 100;
+      }
+      .FontRegular {
+        display: flex;
+        font-size: 2rem;
+        font-weight: 300;
+      }
+      .FontMedium {
+        display: flex;
+        font-size: 2rem;
+        font-weight: 500;
+      }
+      .FontSemiBold {
+        display: flex;
+        font-size: 2rem;
+        font-weight: 700;
+      }
+      .FontBold {
+        display: flex;
+        font-size: 2rem;
+        font-weight: 900;
+      }
     }
   }
 }
