--- a/zero100.css
+++ b/zero100.css
@@ -930,7 +930,10 @@ body {
     font-weight: 200;
     background: rgb(0, 0, 0);
   }
-  #innerWrapp {
+  #backBtn {
+    display: none;
+  }
+  .se #innerWrapp {
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -941,6 +944,74 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  #intro {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  #intro .DescWarpp {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #intro .DescWarpp .logoWarpp {
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  #intro .DescWarpp .logoWarpp .introSymbol {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #intro .DescWarpp .logoWarpp .introLogo {
+    width: auto;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #intro .DescWarpp .allDescWarpp {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  #intro .DescWarpp .allDescWarpp .txtWarpp {
+    display: flex;
+    gap: 20px;
+    font-size: 0.7rem;
+    font-weight: normal;
+  }
+  #intro .DescWarpp .allDescWarpp .partWrapp {
+    display: flex;
+    justify-content: right;
+    gap: 20px;
+    opacity: 0.6;
+    font-weight: normal;
+  }
+  #intro .introImg {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 200px 0 200px 0;
+  }
+  #intro .introImg .backImg {
+    display: flex;
+    width: 100%;
+  }
+  #intro .introImg .frontImg {
+    transform: translateY(-100px);
   }
   #bg {
     width: 100%;
