--- a/zero100.scss
+++ b/zero100.scss
@@ -916,7 +916,10 @@ $color: (
     font-weight: 200;
     background: rgb(0, 0, 0);
   }
-  #innerWrapp {
+  #backBtn {
+    display: none;
+  }
+  .se #innerWrapp {
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -927,6 +930,74 @@ $color: (
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  #intro {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    .DescWarpp {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .logoWarpp {
+        width: auto;
+        height: auto;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        .introSymbol {
+          width: 50px;
+          height: 50px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .introLogo {
+          width: auto;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+      .allDescWarpp {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .txtWarpp {
+          display: flex;
+          gap: 20px;
+          font-size: 0.7rem;
+          font-weight: normal;
+        }
+        .partWrapp {
+          display: flex;
+          justify-content: right;
+          gap: 20px;
+          opacity: 0.6;
+          font-weight: normal;
+        }
+      }
+    }
+    .introImg {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 200px 0 200px 0;
+      .backImg {
+        display: flex;
+        width: 100%;
+      }
+      .frontImg {
+        transform: translateY(-100px);
+      }
+    }
   }
   #bg {
     width: 100%;
