--- a/amazon.scss
+++ b/amazon.scss
@@ -21,32 +21,89 @@ $color: (
   }
 }
 #intro {
-  width: 100%;
-  background: #f00;
+  background: rgb(0, 0, 0);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: auto;
-  padding: 100px;
+  justify-content: center;
+  padding: 100px 0 0;
+  height: 76vh;
+  object-fit: contain;
+  overflow: hidden;
+  position: relative;
+  .logo {
+    position: absolute;
+    width: auto;
+    height: auto;
+    object-fit: cover;
+    z-index: 30;
+    filter: invert(0);
+    img {
+      width: 300px;
+      height: auto;
+    }
+  }
+  .video-wrapper {
+    position: relative;
+    width: 100%; /* 원하는 너비 설정 */
+    max-width: 800px; /* 최대 너비 설정 (필요시) */
+    height: auto; /* 높이는 비디오에 맞춤 */
+    overflow: hidden;
+  }
+
+  /* 비디오 스타일 */
+  .video-wrapper video {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+  }
+
+  /* 어두운 필터 */
+  .filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 투명도 조정 (0.4는 40% 어두움) */
+    pointer-events: none; /* 필터가 클릭을 막지 않도록 설정 */
+  }
 }
 #bg {
-  padding: 60px 0;
+  padding: 250px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #000;
   .bgTitle {
     width: 100%;
     text-align: center;
     font-size: 1.4rem;
     font-weight: 600;
-    padding: 30px;
+    color: #fff;
+  }
+  .aktxt {
+    display: flex;
+    color: #fff;
+    font-size: 1.4rem;
+    .yellow {
+      color: map-get($color, keyColor);
+      font-weight: bold;
+    }
+  }
+  img {
+    padding: 20px;
   }
   .bgtext {
     width: 100%;
     text-align: center;
     font-size: 16px;
+    color: #ccc;
   }
 }
 #process {
   padding-top: 60px;
-  padding: 0 40px;
+  padding: 60px 40px;
   .processTitle {
     font-size: 1.8rem;
   }
@@ -86,7 +143,7 @@ $color: (
   }
 }
 #search {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   .titleWrapp {
     display: flex;
     flex-direction: column;
@@ -130,7 +187,7 @@ $color: (
   }
 }
 #searchTwo {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   .titleWrapp {
     display: flex;
     flex-direction: column;
@@ -175,7 +232,7 @@ $color: (
   }
 }
 #tobe {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   background: #171717;
   .titleWrapp {
     display: flex;
@@ -225,7 +282,7 @@ $color: (
   }
 }
 #prime {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   background: #000;
   .titleWrapp {
     display: flex;
@@ -275,7 +332,7 @@ $color: (
   }
 }
 #appFlow {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   background: #000;
   .titleWrapp {
     display: flex;
